--- a/src/.deps/callbacks.Po
+++ b/src/.deps/callbacks.Po
@@ -605,7 +605,7 @@ callbacks.o: callbacks.c /usr/include/stdc-predef.h ../config.h \
  /usr/include/gtk-2.0/gtk/gtkpreview.h \
  /usr/include/gtk-2.0/gtk/gtktipsquery.h callbacks.h interface.h \
  support.h /usr/include/libintl.h /usr/include/locale.h \
- /usr/include/x86_64-linux-gnu/bits/locale.h rec.h
+ /usr/include/x86_64-linux-gnu/bits/locale.h rec.h /usr/include/ctype.h
 
 /usr/include/stdc-predef.h:
 
@@ -1960,3 +1960,5 @@ support.h:
 /usr/include/x86_64-linux-gnu/bits/locale.h:
 
 rec.h:
+
+/usr/include/ctype.h:
